setup hive.home sysprops for running tests
git-svn-id: https://svn.apache.org/repos/asf/incubator/sqoop/trunk@1153528 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -235,6 +235,7 @@ limitations under the License.
             <java.io.tmpdir>${project.build.outputDirectory}</java.io.tmpdir>
             <sqoop.src.dir>${project.build.outputDirectory}</sqoop.src.dir>
             <sqoop.test.import.rootDir>${project.build.outputDirectory}</sqoop.test.import.rootDir>
+            <hive.home>${basedir}/testdata/hive</hive.home>
           </systemPropertyVariables>
           <excludes>
             <exclude>**/**MySQL*.java</exclude>
