--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -29,10 +29,10 @@ commons-lang.version=2.4
 commons-logging.version=1.0.4
 
 # Cloudera Distribution dependency version
-hadoop-core.cloudera.version=0.20.2-737
+hadoop-core.cloudera.version=0.20.2-cdh3u1
 
-hbase.version=0.89.20100924-28
-zookeeper.version=3.3.1+7
+hbase.version=0.90.3-cdh3u1
+zookeeper.version=3.3.3-cdh3u1
 
 hsqldb.version=1.8.0.10
 
