SQOOP-326. Upgrade Avro dependency version.
(Alejandro Abdelnur via Arvind Prabhakar)


git-svn-id: https://svn.apache.org/repos/asf/incubator/sqoop/trunk@1163453 13f79535-47bb-0310-9956-ffa450edef68

--- a/ivy.xml
+++ b/ivy.xml
@@ -123,5 +123,7 @@ under the License.
       <exclude org="log4j" module="log4j"/>
     </dependency>
 
+    <exclude org="org.apache.hadoop" module="avro"/>
+
   </dependencies>
 </ivy-module>
