--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,8 @@ limitations under the License.
     <hadoopVersion>0.20.2-cdh3u1</hadoopVersion>
 
     <hbaseVersion>0.90.3-cdh3u1</hbaseVersion>
+    <log4j.version>1.2.16</log4j.version>
+
   </properties>
 
   <dependencies>
@@ -250,7 +252,12 @@ limitations under the License.
       <version>1.5.8</version>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>${log4j.version}</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
