--- a/pom.xml
+++ b/pom.xml
@@ -75,8 +75,8 @@ limitations under the License.
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compile.source>1.5</maven.compile.source>
-    <maven.compile.target>1.5</maven.compile.target>
+    <maven.compile.source>1.6</maven.compile.source>
+    <maven.compile.target>1.6</maven.compile.target>
     <avroVersion>1.5.2</avroVersion>
     <!--
     <hadoopVersion>0.20.203.0</hadoopVersion>
@@ -275,8 +275,8 @@ limitations under the License.
           <artifactId>maven-compiler-plugin</artifactId>
           <version>2.3.2</version>
           <configuration>
-            <source>1.5</source>
-            <target>1.5</target>
+            <source>${maven.compile.source}</source>
+            <target>${maven.compile.target}</target>
           </configuration>
         </plugin>
         <plugin>
