--- a/build.xml
+++ b/build.xml
@@ -33,7 +33,7 @@
   <property environment="env"/>
   <property name="name" value="sqoop" />
   <property name="Name" value="Sqoop" />
-  <property name="version" value="1.4.0-SNAPSHOT" />
+  <property name="version" value="1.4.0-incubating-SNAPSHOT" />
 
   <!-- The last version released. -->
   <property name="oldversion" value="1.3.0" />
