using ${version} is deprecated in favour of ${project.version}
git-svn-id: https://svn.apache.org/repos/asf/incubator/sqoop/trunk@1187768 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -353,7 +353,7 @@ limitations under the License.
           <commandlineArgs>-e</commandlineArgs>
           <environmentVariables>
             <BUILDROOT>../../target</BUILDROOT>
-            <VERSION>${version}</VERSION>
+            <VERSION>${project.version}</VERSION>
           </environmentVariables>
         </configuration>
       </plugin>
