--- a/pom.xml
+++ b/pom.xml
@@ -361,28 +361,7 @@ limitations under the License.
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.2.1</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>exec</goal>
-            </goals>
-            <phase>package</phase>
-          </execution>
-        </executions>
-        <configuration>
-          <executable>make</executable>
-          <workingDirectory>src/docs</workingDirectory>
-          <commandlineArgs>-e</commandlineArgs>
-          <environmentVariables>
-            <BUILDROOT>../../target</BUILDROOT>
-            <VERSION>${project.version}</VERSION>
-          </environmentVariables>
-        </configuration>
-      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
@@ -477,6 +456,44 @@ limitations under the License.
         </plugins>
       </build>
     </profile>
+
+    <profile>
+      <id>doc-generation</id>
+      <activation>
+        <property>
+          <name>skipDocumentation</name>
+          <value>!true</value>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.2.1</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <phase>package</phase>
+              </execution>
+            </executions>
+            <configuration>
+              <executable>make</executable>
+              <workingDirectory>src/docs</workingDirectory>
+              <commandlineArgs>-e</commandlineArgs>
+              <environmentVariables>
+                <BUILDROOT>../../target</BUILDROOT>
+                <VERSION>${project.version}</VERSION>
+              </environmentVariables>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+
+    </profile>
+
     <profile>
       <id>reporting</id>
       <activation>
@@ -511,7 +528,7 @@ limitations under the License.
         </plugins>
       </reporting>
     </profile>
-
+  </profiles>
 
   <repositories>
     <repository>
