SQOOP-379 Migrate lib and io packages to new name space
git-svn-id: https://svn.apache.org/repos/asf/incubator/sqoop/trunk@1190430 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -808,7 +808,6 @@
       <arg value="+%Y" />
     </exec>
     <javadoc
-      packagenames="com.cloudera.sqoop.lib.*"
       destdir="${build.javadoc}"
       author="true"
       version="true"
@@ -818,6 +817,7 @@
       bottom="Copyright &amp;copy; ${year} The Apache Software Foundation">
       <packageset dir="${src.dir}">
         <include name="com/cloudera/sqoop/lib/**" />
+        <include name="org/apache/sqoop/lib/**" />
       </packageset>
       <classpath>
         <path refid="compile.classpath" />
