--- a/build.xml
+++ b/build.xml
@@ -36,7 +36,7 @@
   <property name="version" value="1.5.0-incubating-SNAPSHOT" />
 
   <!-- The last version released. -->
-  <property name="oldversion" value="1.4.0" />
+  <property name="oldversion" value="1.4.0-incubating" />
   <!-- The point when we branched for the previous release. -->
   <property name="prev.git.hash"
       value="166417fdb0afd3141c6fd0fdc50043b5e13c2a97" />
