Make sure files under testdata/hive/bin are executable
git-svn-id: https://svn.apache.org/repos/asf/incubator/sqoop/branches/branch-1.4.0@1197867 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -430,6 +430,7 @@
     <!-- make sure the bin scripts are executable. -->
     <chmod perm="ugo+x" type="file" parallel="false">
       <fileset dir="${dist.dir}/bin" />
+      <fileset dir="${dist.dir}/testdata/hive/bin" />
     </chmod>
 
     <!-- make sure any scripts named *.sh are executable. -->
