Make sure files under testdata/hive/bin keep executable mode during packing
git-svn-id: https://svn.apache.org/repos/asf/incubator/sqoop/branches/branch-1.4.0@1197869 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -453,11 +453,13 @@
     <tar compression="gzip" longfile="gnu" destfile="${tar.file}">
       <tarfileset dir="${build.dir}" mode="664">
         <exclude name="${artifact.name}/bin/*" />
+      	<exclude name="${artifact.name}/testdata/hive/bin/*" />
         <exclude name="${artifact.name}/**/*.sh" />
         <include name="${artifact.name}/**" />
       </tarfileset>
       <tarfileset dir="${build.dir}" mode="755">
         <include name="${artifact.name}/bin/*" />
+      	<include name="${artifact.name}/testdata/hive/bin/*" />
         <include name="${artifact.name}/**/*.sh" />
       </tarfileset>
     </tar>
