--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -28,15 +28,14 @@ commons-io.version=1.4
 commons-lang.version=2.4
 commons-logging.version=1.0.4
 
-# Cloudera Distribution dependency version
-hadoop-core.cloudera.version=0.20.2-cdh3u1
-
+hadoop-core.version=0.20.2-cdh3u1
+hadoop-common.version=0.23.0-SNAPSHOT
 hbase.version=0.90.3-cdh3u1
 zookeeper.version=3.3.3-cdh3u1
 
 hsqldb.version=1.8.0.10
 
-ivy.version=2.0.0-rc2
+ivy.version=2.1.0
 
 junit.version=4.5
 
