--- a/ivy.xml
+++ b/ivy.xml
@@ -36,14 +36,13 @@ under the License.
     <conf name="common" visibility="private"
       extends="runtime"
       description="artifacts needed to compile/test the application"/>
-    <conf name="cloudera" visibility="private"
-      extends="common,runtime"
-      description="artifacts from Cloudera for compile/test" />
+    <conf name="hbase" visibility="private" />
+    <conf name="hadoop23" visibility="private" extends="common,runtime,hbase" />
+    <conf name="hadoop20" visibility="private" extends="common,runtime,hbase" />
 
     <conf name="test" visibility="private" extends="common,runtime"/>
-    <conf name="clouderatest" visibility="private"
-      extends="test,cloudera"
-      description="artifacts from Cloudera for testing" />
+    <conf name="hadoop23test" visibility="private" extends="test,hadoop23" />
+    <conf name="hadoop20test" visibility="private" extends="test,hadoop20" />
 
     <!-- We don't redistribute everything we depend on (e.g., Hadoop itself);
          anything which Hadoop itself also depends on, we do not ship.
@@ -67,11 +66,28 @@ under the License.
     <artifact conf="master"/>
   </publications>
   <dependencies>
-    <!-- Dependencies for Cloudera's Distribution for Hadoop -->
+
+    <!-- Dependencies for Hadoop 0.23 -->
+    <dependency org="org.apache.hadoop" name="hadoop-common"
+      rev="${hadoop-common.version}" conf="hadoop23->default">
+      <artifact name="hadoop-common" type="jar" />
+      <artifact name="hadoop-common" type="jar" m:classifier="tests"/>
+    </dependency>
+    <dependency org="org.apache.hadoop" name="hadoop-hdfs"
+      rev="${hadoop-common.version}" conf="hadoop23->default">
+      <artifact name="hadoop-hdfs" type="jar" />
+      <artifact name="hadoop-hdfs" type="jar" m:classifier="tests"/>
+    </dependency>
+    <dependency org="org.apache.hadoop" name="hadoop-mapreduce-client-common"
+      rev="${hadoop-common.version}" conf="hadoop23->default"/>
+    <dependency org="org.apache.hadoop" name="hadoop-mapreduce-client-core"
+      rev="${hadoop-common.version}" conf="hadoop23->default"/>
+
+    <!-- Dependencies for Hadoop 0.20 -->
     <dependency org="org.apache.hadoop" name="hadoop-core"
-      rev="${hadoop-core.cloudera.version}" conf="cloudera->default"/>
+      rev="${hadoop-core.version}" conf="hadoop20->default"/>
     <dependency org="org.apache.hadoop" name="hadoop-test"
-      rev="${hadoop-core.cloudera.version}" conf="clouderatest->default"/>
+      rev="${hadoop-core.version}" conf="hadoop20test->default"/>
 
     <!-- Common dependencies for Sqoop -->
     <dependency org="commons-cli" name="commons-cli"
@@ -113,7 +129,7 @@ under the License.
       rev="${commons-collections.version}" conf="releaseaudit->default"/>
 
     <dependency org="org.apache.hbase" name="hbase"
-      rev="${hbase.version}" conf="cloudera->default">
+      rev="${hbase.version}" conf="hbase->default">
       <artifact name="hbase" type="jar"/>
       <artifact name="hbase" type="test-jar" ext="jar" m:classifier="tests"/>
       <exclude org="com.sun.jersey" module="jersey-core"/>
@@ -121,9 +137,12 @@ under the License.
       <exclude org="com.sun.jersey" module="jersey-server"/>
       <exclude org="org.apache.thrift" module="thrift"/>
       <exclude org="log4j" module="log4j"/>
+      <exclude org="org.apache.hadoop" module="hadoop-core" />
+      <exclude org="com.cloudera.cdh" module="zookeeper-ant" />
     </dependency>
 
     <exclude org="org.apache.hadoop" module="avro"/>
+    <exclude org="commons-daemon" module="commons-daemon" />
 
   </dependencies>
 </ivy-module>
